--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
+
 body.f-roboto {
 	#home {
 		font-family: "Roboto", sans-serif !important;
@@ -51,11 +55,10 @@ body.f-roboto {
 ::-webkit-scrollbar-thumb {
 	background: #252525;
 	border-radius: 10px;
-	
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background: #474747
+	background: #474747;
 }
 
 ::-webkit-scrollbar-thumb:active {
@@ -68,17 +71,17 @@ body.f-roboto {
 		color: #bebebe;
 	}
 }
-#baby-advaith-pic{
+#baby-advaith-pic {
 	width: 100%;
 }
-#home-content{
+#home-content {
 	width: 600px;
 }
-@media screen and (max-width: 800px){
-	#baby-advaith-pic{
+@media screen and (max-width: 800px) {
+	#baby-advaith-pic {
 		width: 80%;
 	}
-	#home-content{
+	#home-content {
 		width: 80vw;
 	}
 }
