--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -593,7 +593,7 @@ pre code {
 @media (min-width: 576px) {
 	.container,
 	.container-sm {
-		max-width: 540px;
+		max-width: 540px !important;
 	}
 }
 
@@ -601,7 +601,7 @@ pre code {
 	.container,
 	.container-sm,
 	.container-md {
-		max-width: 720px;
+		max-width: 720px !important;
 	}
 }
 
@@ -610,7 +610,7 @@ pre code {
 	.container-sm,
 	.container-md,
 	.container-lg {
-		max-width: 960px;
+		max-width: 960px !important;
 	}
 }
 
@@ -620,7 +620,7 @@ pre code {
 	.container-md,
 	.container-lg,
 	.container-xl {
-		max-width: 1140px;
+		max-width: 1140px !important;
 	}
 }
 
@@ -727,7 +727,7 @@ pre code {
 	flex-grow: 1;
 	max-width: 100%;
 }
-
+/* 
 .row-cols-1 > * {
 	-ms-flex: 0 0 100%;
 	flex: 0 0 100%;
@@ -762,7 +762,7 @@ pre code {
 	-ms-flex: 0 0 16.666667%;
 	flex: 0 0 16.666667%;
 	max-width: 16.666667%;
-}
+} */
 
 .col-auto {
 	-ms-flex: 0 0 auto;
@@ -842,7 +842,7 @@ pre code {
 	flex: 0 0 100%;
 	max-width: 100%;
 }
-
+/* NOTE order
 .order-first {
 	-ms-flex-order: -1;
 	order: -1;
@@ -916,8 +916,8 @@ pre code {
 .order-12 {
 	-ms-flex-order: 12;
 	order: 12;
-}
-
+} */
+/* NOTE offset
 .offset-1 {
 	margin-left: 8.333333%;
 }
@@ -960,7 +960,7 @@ pre code {
 
 .offset-11 {
 	margin-left: 91.666667%;
-}
+} */
 
 @media (min-width: 576px) {
 	.col-sm {
@@ -1066,7 +1066,7 @@ pre code {
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-	.order-sm-first {
+	/* .order-sm-first {
 		-ms-flex-order: -1;
 		order: -1;
 	}
@@ -1161,7 +1161,7 @@ pre code {
 	}
 	.offset-sm-11 {
 		margin-left: 91.666667%;
-	}
+	} */
 }
 
 @media (min-width: 768px) {
@@ -1268,7 +1268,7 @@ pre code {
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-	.order-md-first {
+	/* .order-md-first {
 		-ms-flex-order: -1;
 		order: -1;
 	}
@@ -1363,7 +1363,7 @@ pre code {
 	}
 	.offset-md-11 {
 		margin-left: 91.666667%;
-	}
+	} */
 }
 
 @media (min-width: 992px) {
@@ -1470,7 +1470,7 @@ pre code {
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-	.order-lg-first {
+	/* .order-lg-first {
 		-ms-flex-order: -1;
 		order: -1;
 	}
@@ -1565,7 +1565,7 @@ pre code {
 	}
 	.offset-lg-11 {
 		margin-left: 91.666667%;
-	}
+	} */
 }
 
 @media (min-width: 1200px) {
@@ -1672,7 +1672,7 @@ pre code {
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-	.order-xl-first {
+	/* .order-xl-first {
 		-ms-flex-order: -1;
 		order: -1;
 	}
@@ -1767,7 +1767,7 @@ pre code {
 	}
 	.offset-xl-11 {
 		margin-left: 91.666667%;
-	}
+	} */
 }
 
 .table {
@@ -2354,7 +2354,7 @@ textarea.form-control {
 	background-color: rgba(40, 167, 69, 0.9);
 	border-radius: 0.25rem;
 }
-
+/* NOTE form validation
 .was-validated :valid ~ .valid-feedback,
 .was-validated :valid ~ .valid-tooltip,
 .is-valid ~ .valid-feedback,
@@ -2583,7 +2583,7 @@ textarea.form-control.is-invalid {
 .custom-file-input.is-invalid:focus ~ .custom-file-label {
 	border-color: #dc3545;
 	box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
-}
+} */
 
 .form-inline {
 	display: -ms-flexbox;
@@ -3439,8 +3439,8 @@ input[type="button"].btn-block {
 
 .dropdown-menu {
 	position: absolute;
-  top: 100%;
-  /* NOTE CHANGE */
+	top: 100%;
+	/* NOTE CHANGE */
 	/* left: 0; */
 	z-index: 1000;
 	display: none;
@@ -3998,7 +3998,7 @@ input[type="button"].btn-block {
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
 }
-
+/* 
 .custom-control {
 	position: relative;
 	z-index: 1;
@@ -4494,7 +4494,7 @@ input[type="button"].btn-block {
 	.custom-select {
 		transition: none;
 	}
-}
+} */
 
 .nav {
 	display: -ms-flexbox;
@@ -4808,7 +4808,7 @@ input[type="button"].btn-block {
 		padding-left: 0;
 	}
 }
-
+/* NOTE changed breakpoint */
 @media (min-width: 992px) {
 	.navbar-expand-lg {
 		-ms-flex-flow: row nowrap;
@@ -5271,7 +5271,7 @@ input[type="button"].btn-block {
 		width: 100%;
 	}
 }
-
+/* 
 .accordion {
 	overflow-anchor: none;
 }
@@ -5334,8 +5334,8 @@ input[type="button"].btn-block {
 
 .breadcrumb-item.active {
 	color: #6c757d;
-}
-
+} */
+/* 
 .pagination {
 	display: -ms-flexbox;
 	display: flex;
@@ -5425,8 +5425,8 @@ input[type="button"].btn-block {
 .pagination-sm .page-item:last-child .page-link {
 	border-top-right-radius: 0.2rem;
 	border-bottom-right-radius: 0.2rem;
-}
-
+} */
+/* 
 .badge {
 	display: inline-block;
 	padding: 0.25em 0.4em;
@@ -5601,7 +5601,7 @@ a.badge-dark:focus,
 a.badge-dark.focus {
 	outline: 0;
 	box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
-}
+} */
 
 .jumbotron {
 	padding: 2rem 1rem;
@@ -5621,7 +5621,7 @@ a.badge-dark.focus {
 	padding-left: 0;
 	border-radius: 0;
 }
-
+/* 
 .alert {
 	position: relative;
 	padding: 0.75rem 1.25rem;
@@ -5761,7 +5761,7 @@ a.badge-dark.focus {
 
 .alert-dark .alert-link {
 	color: #040505;
-}
+} */
 
 @-webkit-keyframes progress-bar-stripes {
 	from {
@@ -5850,7 +5850,7 @@ a.badge-dark.focus {
 	-ms-flex: 1;
 	flex: 1;
 }
-
+/* 
 .list-group {
 	display: -ms-flexbox;
 	display: flex;
@@ -6200,7 +6200,7 @@ a.badge-dark.focus {
 	color: #fff;
 	background-color: #1b1e21;
 	border-color: #1b1e21;
-}
+} */
 
 .close {
 	float: right;
@@ -6231,55 +6231,8 @@ button.close {
 a.close.disabled {
 	pointer-events: none;
 }
-
-.toast {
-	-ms-flex-preferred-size: 350px;
-	flex-basis: 350px;
-	max-width: 350px;
-	font-size: 0.875rem;
-	background-color: rgba(255, 255, 255, 0.85);
-	background-clip: padding-box;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
-	opacity: 0;
-	border-radius: 0.25rem;
-}
-
-.toast:not(:last-child) {
-	margin-bottom: 0.75rem;
-}
-
-.toast.showing {
-	opacity: 1;
-}
-
-.toast.show {
-	display: block;
-	opacity: 1;
-}
-
-.toast.hide {
-	display: none;
-}
-
-.toast-header {
-	display: -ms-flexbox;
-	display: flex;
-	-ms-flex-align: center;
-	align-items: center;
-	padding: 0.25rem 0.75rem;
-	color: #6c757d;
-	background-color: rgba(255, 255, 255, 0.85);
-	background-clip: padding-box;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-	border-top-left-radius: calc(0.25rem - 1px);
-	border-top-right-radius: calc(0.25rem - 1px);
-}
-
-.toast-body {
-	padding: 0.75rem;
-}
-
+/* NOTE remove toasts */
+/* NOTE comment out modal 
 .modal-open {
 	overflow: hidden;
 }
@@ -6512,314 +6465,8 @@ a.close.disabled {
 	.modal-xl {
 		max-width: 1140px;
 	}
-}
-
-.tooltip {
-	position: absolute;
-	z-index: 1070;
-	display: block;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		"Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	font-style: normal;
-	font-weight: 400;
-	line-height: 1.5;
-	text-align: left;
-	text-align: start;
-	text-decoration: none;
-	text-shadow: none;
-	text-transform: none;
-	letter-spacing: normal;
-	word-break: normal;
-	word-spacing: normal;
-	white-space: normal;
-	line-break: auto;
-	font-size: 0.875rem;
-	word-wrap: break-word;
-	opacity: 0;
-}
-
-.tooltip.show {
-	opacity: 0.9;
-}
-
-.tooltip .arrow {
-	position: absolute;
-	display: block;
-	width: 0.8rem;
-	height: 0.4rem;
-}
-
-.tooltip .arrow::before {
-	position: absolute;
-	content: "";
-	border-color: transparent;
-	border-style: solid;
-}
-
-.bs-tooltip-top,
-.bs-tooltip-auto[x-placement^="top"] {
-	padding: 0.4rem 0;
-}
-
-.bs-tooltip-top .arrow,
-.bs-tooltip-auto[x-placement^="top"] .arrow {
-	bottom: 0;
-}
-
-.bs-tooltip-top .arrow::before,
-.bs-tooltip-auto[x-placement^="top"] .arrow::before {
-	top: 0;
-	border-width: 0.4rem 0.4rem 0;
-	border-top-color: #000;
-}
-
-.bs-tooltip-right,
-.bs-tooltip-auto[x-placement^="right"] {
-	padding: 0 0.4rem;
-}
-
-.bs-tooltip-right .arrow,
-.bs-tooltip-auto[x-placement^="right"] .arrow {
-	left: 0;
-	width: 0.4rem;
-	height: 0.8rem;
-}
-
-.bs-tooltip-right .arrow::before,
-.bs-tooltip-auto[x-placement^="right"] .arrow::before {
-	right: 0;
-	border-width: 0.4rem 0.4rem 0.4rem 0;
-	border-right-color: #000;
-}
-
-.bs-tooltip-bottom,
-.bs-tooltip-auto[x-placement^="bottom"] {
-	padding: 0.4rem 0;
-}
-
-.bs-tooltip-bottom .arrow,
-.bs-tooltip-auto[x-placement^="bottom"] .arrow {
-	top: 0;
-}
-
-.bs-tooltip-bottom .arrow::before,
-.bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
-	bottom: 0;
-	border-width: 0 0.4rem 0.4rem;
-	border-bottom-color: #000;
-}
-
-.bs-tooltip-left,
-.bs-tooltip-auto[x-placement^="left"] {
-	padding: 0 0.4rem;
-}
-
-.bs-tooltip-left .arrow,
-.bs-tooltip-auto[x-placement^="left"] .arrow {
-	right: 0;
-	width: 0.4rem;
-	height: 0.8rem;
-}
-
-.bs-tooltip-left .arrow::before,
-.bs-tooltip-auto[x-placement^="left"] .arrow::before {
-	left: 0;
-	border-width: 0.4rem 0 0.4rem 0.4rem;
-	border-left-color: #000;
-}
-
-.tooltip-inner {
-	max-width: 200px;
-	padding: 0.25rem 0.5rem;
-	color: #fff;
-	text-align: center;
-	background-color: #000;
-	border-radius: 0.25rem;
-}
-
-.popover {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 1060;
-	display: block;
-	max-width: 276px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		"Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	font-style: normal;
-	font-weight: 400;
-	line-height: 1.5;
-	text-align: left;
-	text-align: start;
-	text-decoration: none;
-	text-shadow: none;
-	text-transform: none;
-	letter-spacing: normal;
-	word-break: normal;
-	word-spacing: normal;
-	white-space: normal;
-	line-break: auto;
-	font-size: 0.875rem;
-	word-wrap: break-word;
-	background-color: #fff;
-	background-clip: padding-box;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	border-radius: 0.3rem;
-}
-
-.popover .arrow {
-	position: absolute;
-	display: block;
-	width: 1rem;
-	height: 0.5rem;
-	margin: 0 0.3rem;
-}
-
-.popover .arrow::before,
-.popover .arrow::after {
-	position: absolute;
-	display: block;
-	content: "";
-	border-color: transparent;
-	border-style: solid;
-}
-
-.bs-popover-top,
-.bs-popover-auto[x-placement^="top"] {
-	margin-bottom: 0.5rem;
-}
-
-.bs-popover-top > .arrow,
-.bs-popover-auto[x-placement^="top"] > .arrow {
-	bottom: calc(-0.5rem - 1px);
-}
-
-.bs-popover-top > .arrow::before,
-.bs-popover-auto[x-placement^="top"] > .arrow::before {
-	bottom: 0;
-	border-width: 0.5rem 0.5rem 0;
-	border-top-color: rgba(0, 0, 0, 0.25);
-}
-
-.bs-popover-top > .arrow::after,
-.bs-popover-auto[x-placement^="top"] > .arrow::after {
-	bottom: 1px;
-	border-width: 0.5rem 0.5rem 0;
-	border-top-color: #fff;
-}
-
-.bs-popover-right,
-.bs-popover-auto[x-placement^="right"] {
-	margin-left: 0.5rem;
-}
-
-.bs-popover-right > .arrow,
-.bs-popover-auto[x-placement^="right"] > .arrow {
-	left: calc(-0.5rem - 1px);
-	width: 0.5rem;
-	height: 1rem;
-	margin: 0.3rem 0;
-}
-
-.bs-popover-right > .arrow::before,
-.bs-popover-auto[x-placement^="right"] > .arrow::before {
-	left: 0;
-	border-width: 0.5rem 0.5rem 0.5rem 0;
-	border-right-color: rgba(0, 0, 0, 0.25);
-}
-
-.bs-popover-right > .arrow::after,
-.bs-popover-auto[x-placement^="right"] > .arrow::after {
-	left: 1px;
-	border-width: 0.5rem 0.5rem 0.5rem 0;
-	border-right-color: #fff;
-}
-
-.bs-popover-bottom,
-.bs-popover-auto[x-placement^="bottom"] {
-	margin-top: 0.5rem;
-}
-
-.bs-popover-bottom > .arrow,
-.bs-popover-auto[x-placement^="bottom"] > .arrow {
-	top: calc(-0.5rem - 1px);
-}
-
-.bs-popover-bottom > .arrow::before,
-.bs-popover-auto[x-placement^="bottom"] > .arrow::before {
-	top: 0;
-	border-width: 0 0.5rem 0.5rem 0.5rem;
-	border-bottom-color: rgba(0, 0, 0, 0.25);
-}
-
-.bs-popover-bottom > .arrow::after,
-.bs-popover-auto[x-placement^="bottom"] > .arrow::after {
-	top: 1px;
-	border-width: 0 0.5rem 0.5rem 0.5rem;
-	border-bottom-color: #fff;
-}
-
-.bs-popover-bottom .popover-header::before,
-.bs-popover-auto[x-placement^="bottom"] .popover-header::before {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	display: block;
-	width: 1rem;
-	margin-left: -0.5rem;
-	content: "";
-	border-bottom: 1px solid #f7f7f7;
-}
-
-.bs-popover-left,
-.bs-popover-auto[x-placement^="left"] {
-	margin-right: 0.5rem;
-}
-
-.bs-popover-left > .arrow,
-.bs-popover-auto[x-placement^="left"] > .arrow {
-	right: calc(-0.5rem - 1px);
-	width: 0.5rem;
-	height: 1rem;
-	margin: 0.3rem 0;
-}
-
-.bs-popover-left > .arrow::before,
-.bs-popover-auto[x-placement^="left"] > .arrow::before {
-	right: 0;
-	border-width: 0.5rem 0 0.5rem 0.5rem;
-	border-left-color: rgba(0, 0, 0, 0.25);
-}
-
-.bs-popover-left > .arrow::after,
-.bs-popover-auto[x-placement^="left"] > .arrow::after {
-	right: 1px;
-	border-width: 0.5rem 0 0.5rem 0.5rem;
-	border-left-color: #fff;
-}
-
-.popover-header {
-	padding: 0.5rem 0.75rem;
-	margin-bottom: 0;
-	font-size: 1rem;
-	background-color: #f7f7f7;
-	border-bottom: 1px solid #ebebeb;
-	border-top-left-radius: calc(0.3rem - 1px);
-	border-top-right-radius: calc(0.3rem - 1px);
-}
-
-.popover-header:empty {
-	display: none;
-}
-
-.popover-body {
-	padding: 0.5rem 0.75rem;
-	color: #212529;
-}
-
+} */
+/* NOTE comment out carousel
 .carousel {
 	position: relative;
 }
@@ -7020,7 +6667,7 @@ a.close.disabled {
 	padding-bottom: 20px;
 	color: #fff;
 	text-align: center;
-}
+} */
 
 @-webkit-keyframes spinner-border {
 	to {
@@ -7094,7 +6741,7 @@ a.close.disabled {
 	width: 1rem;
 	height: 1rem;
 }
-
+/* 
 .align-baseline {
 	vertical-align: baseline !important;
 }
@@ -7117,7 +6764,7 @@ a.close.disabled {
 
 .align-text-top {
 	vertical-align: text-top !important;
-}
+} */
 
 .bg-primary {
 	background-color: #007bff !important;
@@ -7581,7 +7228,7 @@ button.bg-dark:focus {
 .embed-responsive-1by1::before {
 	padding-top: 100%;
 }
-
+/* NOTE flex stuff
 .flex-row {
 	-ms-flex-direction: row !important;
 	flex-direction: row !important;
@@ -7750,8 +7397,7 @@ button.bg-dark:focus {
 .align-self-stretch {
 	-ms-flex-item-align: stretch !important;
 	align-self: stretch !important;
-}
-
+} 
 @media (min-width: 576px) {
 	.flex-sm-row {
 		-ms-flex-direction: row !important;
@@ -8306,7 +7952,7 @@ button.bg-dark:focus {
 		-ms-flex-item-align: stretch !important;
 		align-self: stretch !important;
 	}
-}
+} */
 
 .float-left {
 	float: left !important;
@@ -8367,7 +8013,7 @@ button.bg-dark:focus {
 		float: none !important;
 	}
 }
-
+/* 
 .user-select-all {
 	-webkit-user-select: all !important;
 	-moz-user-select: all !important;
@@ -8387,7 +8033,7 @@ button.bg-dark:focus {
 	-moz-user-select: none !important;
 	-ms-user-select: none !important;
 	user-select: none !important;
-}
+} */
 
 .overflow-auto {
 	overflow: auto !important;
@@ -8591,7 +8237,7 @@ button.bg-dark:focus {
 .text-center {
 	text-align: center !important;
 }
-
+/* NOTE text breakpoints
 @media (min-width: 576px) {
 	.text-sm-left {
 		text-align: left !important;
@@ -8638,7 +8284,7 @@ button.bg-dark:focus {
 	.text-xl-center {
 		text-align: center !important;
 	}
-}
+} */
 
 .text-lowercase {
 	text-transform: lowercase !important;
@@ -8650,26 +8296,6 @@ button.bg-dark:focus {
 
 .text-capitalize {
 	text-transform: capitalize !important;
-}
-
-.font-weight-light {
-	font-weight: 300 !important;
-}
-
-.font-weight-lighter {
-	font-weight: lighter !important;
-}
-
-.font-weight-normal {
-	font-weight: 400 !important;
-}
-
-.font-weight-bold {
-	font-weight: 700 !important;
-}
-
-.font-weight-bolder {
-	font-weight: bolder !important;
 }
 
 .font-italic {
