--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+.f-nunito {
+	font-family: "Nunito", sans-serif !important;
+}
 
 body.f-roboto {
 	#home {
@@ -111,5 +115,24 @@ $spinner-border: 2.5px;
 	}
 	to {
 		transform: rotate(360deg);
+	}
+}
+
+.lit-btn {
+	outline: none !important;
+	background-image: linear-gradient(135deg, #329cff, #0059ff);
+	border: none;
+	font-size: 18px;
+	padding: 8px 18px;
+	border-radius: 5px;
+	color: white;
+	box-shadow: 4px 4px 5px rgba(20, 20, 20, 0.2);
+	transition: 200ms;
+	text-transform: uppercase;
+	&:hover {
+		filter: brightness(1.1);
+		box-shadow: 4px 4px 5px rgba(20, 20, 20, 0.25);
+		text-decoration: none;
+		color: white;
 	}
 }
